# rover-app

./: .cproject  .gitattributes  .gitignore  .project  .travis.yml  CMakeLists.txt  Dockerfile  EPL-1.0  README.md  annotated.html  annotated_dup.js  build.sh  calibration.yml  classes.html  classrover_1_1_rover_base-members.html  classrover_1_1_rover_base.html  classrover_1_1_rover_base.js  classrover_1_1_rover_button-members.html  classrover_1_1_rover_button.html  classrover_1_1_rover_button.js  classrover_1_1_rover_buzzer-members.html  classrover_1_1_rover_buzzer.html  classrover_1_1_rover_buzzer.js  classrover_1_1_rover_cloud-members.html  classrover_1_1_rover_cloud.html  classrover_1_1_rover_cloud.js  classrover_1_1_rover_d_h_t22-members.html  classrover_1_1_rover_d_h_t22.html  classrover_1_1_rover_d_h_t22.js  classrover_1_1_rover_display-members.html  classrover_1_1_rover_display.html  classrover_1_1_rover_display.js  classrover_1_1_rover_driving-members.html  classrover_1_1_rover_driving.html  classrover_1_1_rover_driving.js  classrover_1_1_rover_g_y521-members.html  classrover_1_1_rover_g_y521.html  classrover_1_1_rover_g_y521.js  classrover_1_1_rover_gpio-members.html  classrover_1_1_rover_gpio.html  (+188 more)
ExternalCMakeModules/: raspicamConfig.cmake
Lighting-circuit/: index.txt
doxygen/: Doxyfile  UML_Architecture.uml  rover_doxygen_style.css
include/: RaspberryTest.h  interfaces.h  roverapp.h  socket_settings.h
include/api/: basic_psys_rover.h  rover_api.hpp  rover_cloud.hpp  rover_display.hpp  rover_driving.hpp  rover_gpio.hpp  rover_sensors.hpp  rover_utils.hpp  rover_webui.hpp
include/common/: mutexes.h  threads.h
include/drivers/oled_drivers/: Adafruit_GFX.h  Adafruit_SSD1306.h  ArduiPi_SSD1306.h  bcm2835.h
include/libraries/config_reader/: config_reader.h
include/libraries/demo_light/: lightsys.h
include/libraries/hono_interaction/: hono_interaction.h
include/libraries/lightsys/: ws2811.h
include/libraries/pthread_distribution_lib/: pthread_distribution.h
include/menu/: Menu.h  StatusMenu.h  Text.h
include/roverapi/: basic_psys_rover.h  lightsys.h  rover_api.hpp  rover_button.hpp  rover_buzzer.hpp  rover_cloud.hpp  rover_dht22.hpp  rover_display.hpp  rover_driving.hpp  rover_gpio.hpp  rover_grooveultrasonic.hpp  rover_gy521.hpp  rover_hcsr04.hpp  rover_hmc5883l.hpp  rover_honocloud.hpp  rover_infraredsensor.hpp  rover_light.hpp  rover_mqttcommand.hpp  rover_pahomqtt.hpp  rover_qmc5883l.hpp  rover_sensor.hpp  rover_sensors.hpp  rover_utils.hpp  rover_webui.hpp
include/tasks/: accelerometer_task.h  adaptive_cruise_control_task.h  bluetooth_task.h  booth_modes_task.h  compass_sensor_task.h  cpu_logger_task.h  display_sensors_task.h  external_gpio_task.h  hono_interaction_task.h  image_processing_task.h  infrared_distance_task.h  keycommand_task.h  light_task.h  motordriver_task.h  mqtt_publish_task.h  mqtt_subscribe_task.h  oled_task.h  parking_task.h  record_timing_task.h  rover_test_task.h  socket_client_task.h  socket_server_task.h  srf02_task.h  temperature_task.h  ultrasonic_sensor_grove_task.h  ultrasonic_sensor_sr04_back_task.h  ultrasonic_sensor_sr04_front_task.h
menu/rover-menu/: CMakeLists.txt
menu/rover-menu/include/: Menu.h  StatusMenu.h  Text.h  melodies.h
menu/rover-menu/include/demo/: RoverBearingDemo.h  RoverBuzzerDemo.h  RoverDht22Demo.h  RoverDrivingDemo.h  RoverGrooveDemo.h  RoverGy521Demo.h  RoverHelloWorldDemo.h  RoverInfraredDemo.h
menu/rover-menu/src/: Menu.cpp  StatusMenu.cpp  Text.cpp
menu/rover-menu/src/demos/: RoverAccDemo.cpp  RoverDrivingDemo.cpp  RoverHelloWorldDemo.cpp
samples/: rover.conf.sample
scripts/: read_core_usage.py
scripts/ci/: Dockerfile
scripts/tracing/: ListThreads.sh  MonitorThreads.sh  ProfileAThread.sh  ProfileThreadsOfAProcess.sh  TraceLinuxProcesses.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  (+39 more)
src/: RaspberryTest.cpp  roverapp.cpp
src/api/: basic_psys_rover.c  rover_api.cpp  rover_cloud.cpp  rover_display.cpp  rover_driving.cpp  rover_gpio.cpp  rover_sensors.cpp  rover_utils.cpp  rover_webui.cpp
src/examples/: MarkerChaser.cpp  OLEDmenu.cpp  buzzer_button_example.cpp  demo_Light.c  demo_Light.c.save  display_control.cpp  driving_control.cpp  light_demo.cpp  light_demo_new.c  mqtt_publisher.cpp  mqtt_subscriber.cpp  mqtt_telemetry.cpp  poseEstimation.cpp  sensor_reading.cpp  sensor_reading.cpp.cpp  utility_info.cpp
src/menu/: Menu.cpp  StatusMenu.cpp  Text.cpp  main.cpp
src/roverapi/: basic_psys_rover.c  lightsys.c  rover_api.cpp  rover_button.cpp  rover_buzzer.cpp  rover_cloud.cpp  rover_dht22.cpp  rover_display.cpp  rover_driving.cpp  rover_gpio.cpp  rover_grooveultrasonic.cpp  rover_gy521.cpp  rover_hcsr04.cpp  rover_hmc5883l.cpp  rover_honocloud.cpp  rover_infraredsensor.cpp  rover_light.cpp  rover_mqttcommand.cpp  rover_pahomqtt.cpp  rover_qmc5883l.cpp  rover_sensors.cpp  rover_utils.cpp  rover_webui.cpp
src/tasks/: accelerometer_task.cpp  adaptive_cruise_control_task.cpp  bluetooth_task.cpp  booth_modes_task.cpp  compass_sensor_task.cpp  cpu_logger_task.cpp  display_sensors_task.cpp  external_gpio_task.cpp  hono_interaction_task.cpp  image_processing_task.cpp  infrared_distance_task.cpp  keycommand_task.cpp  light_task.cpp  motordriver_task.cpp  mqtt_publish_task.cpp  mqtt_subscribe_task.cpp  oled_task.cpp  parking_task.cpp  record_timing_task.cpp  rover_test_task.cpp  socket_client_task.cpp  socket_server_task.cpp  srf02_task.cpp  temperature_task.cpp  ultrasonic_sensor_grove_task.cpp  ultrasonic_sensor_sr04_back_task.cpp  ultrasonic_sensor_sr04_front_task.cpp
tutorial/: TutorialRoverRoverApp.md
(+46 files in other folders)
